[package]
name = "jeol_parser_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
binrw = "0.11.2"
lazy_static = "1.4.0"
serde = { version = "1.0.188", features = ["derive"] }
struct_iterable = "0.1.1"
