[package]
name = "jeol_parser"
version = "0.1.2"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jeol_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
jeol_parser_core = { path = "../jeol_parser_core" }
pythonize = "0.19.0"
